--- a/FootballLeague/Views/Match/Index.cshtml
+++ b/FootballLeague/Views/Match/Index.cshtml
@@ -1,5 +1,33 @@
-﻿@*
+﻿@model IEnumerable<Match>
+
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
 }
+
+@{
+    var anyMatch = Model.FirstOrDefault();
+}
+
+<h1>Matches in queue no. @anyMatch.QueueId</h1>
+
+<div class="row mb-3 text-center">
+    <div class="col themed-grid-col"><b>Date</b></div>
+    <div class="col themed-grid-col"><b>Time</b></div>
+    <div class="col themed-grid-col"><b>Host Team</b></div>
+    <div class="col themed-grid-col"><b>Score</b></div>
+    <div class="col themed-grid-col"><b>Guest Team</b></div>
+</div>
+
+@foreach (var item in Model)
+{
+    <div class="row mb-3 text-center">
+        <div class="col themed-grid-col">@item.Date</div>
+        <div class="col themed-grid-col">@item.Time</div>
+        <div class="col themed-grid-col">@item.Team1</div>
+        <div class="col themed-grid-col">@item.Score</div>
+        <div class="col themed-grid-col">@item.Team2</div>
+    </div>
+}
+
