Add minor changes to views

--- a/FootballLeague/Views/League/Index.cshtml
+++ b/FootballLeague/Views/League/Index.cshtml
@@ -22,7 +22,7 @@
                 <div style="display: flex; align-items: center; justify-content: center;">
                     <span>@item.LeagueName</span>
                     <span>@item.LegueSeason</span>
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Match" asp-action="Index" style="margin-left: 10px;">Show Queues</a>
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Match" asp-action="Index" style="margin-left: 10px;"><i>Show Queues</i></a>
                 </div>
             </div>
         </div>
