--- a/FootballLeague/Views/Match/Index.cshtml
+++ b/FootballLeague/Views/Match/Index.cshtml
@@ -7,7 +7,8 @@
 }
 
 @{
-    var anyMatch = Model.FirstOrDefault();
+    var anyMatch = Model.ToList()[1];
+    var hhh = Model.Count();
 }
 
 <h1>Matches in queue no. @anyMatch.QueueId</h1>
@@ -30,4 +31,3 @@
         <div class="col themed-grid-col">@item.Team2</div>
     </div>
 }
-
