--- a/FootballLeague/Views/Match/Index.cshtml
+++ b/FootballLeague/Views/Match/Index.cshtml
@@ -23,11 +23,14 @@
 
 @foreach (var item in Model)
 {
+    if (item.QueueId == anyMatch.QueueId)
+    {
     <div class="row mb-3 text-center">
-        <div class="col themed-grid-col">@item.Date</div>
-        <div class="col themed-grid-col">@item.Time</div>
-        <div class="col themed-grid-col">@item.Team1</div>
-        <div class="col themed-grid-col">@item.Score</div>
-        <div class="col themed-grid-col">@item.Team2</div>
-    </div>
+            <div class="col themed-grid-col">@item.Date</div>
+            <div class="col themed-grid-col">@item.Time</div>
+            <div class="col themed-grid-col">@item.Team1</div>
+            <div class="col themed-grid-col">@item.Score</div>
+            <div class="col themed-grid-col">@item.Team2</div>
+        </div>
+    }
 }
